--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   pre-release:
-    uses: abbgrade/PsBuildTasks/.github/workflows/pre-release-windows.yml@1.10.0
+    uses: abbgrade/PsBuildTasks/.github/workflows/pre-release-windows.yml@c506ffc975dcb14c9fdd0579fe455054236ad7dc
     with:
       module-name: PsDataFactory
     secrets:
